[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scripts/GameUnit.gd" type="Script" id=1]
[ext_resource path="res://Assets/Art/Tiles/98x52/grass_1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Art/UI/selection_border_small.png" type="Texture" id=3]
[ext_resource path="res://Styles/shieldbarvalue.tres" type="StyleBox" id=4]
[ext_resource path="res://Styles/healthbarbackground.tres" type="StyleBox" id=5]
[ext_resource path="res://Styles/shieldbarbackground.tres" type="StyleBox" id=6]
[ext_resource path="res://Styles/healthbarvalue.tres" type="StyleBox" id=7]
[ext_resource path="res://Assets/SpriteFrames/SpriteFrame.tres" type="SpriteFrames" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 3.0

[sub_resource type="CircleShape2D" id=2]
radius = 16.0

[sub_resource type="CircleShape2D" id=3]
radius = 39.0

[sub_resource type="StyleBoxFlat" id=4]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.219608, 0.219608, 0.219608, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.501961, 1, 0.380392, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.0588235, 0.388235, 0.0745098, 1 )

[sub_resource type="Curve2D" id=8]
_data = {
"points": PoolVector2Array(  )
}

[node name="GameUnit" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sounds" type="Node2D" parent="."]
visible = false

[node name="TileBase" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )

[node name="SelectionBorder" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )

[node name="Target" type="Sprite" parent="."]
visible = false
modulate = Color( 0.996078, 0.0117647, 0.0117647, 1 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 3 )

[node name="Footprint" type="CollisionShape2D" parent="."]
visible = false
scale = Vector2( 1.75, 1 )
shape = SubResource( 1 )
disabled = true

[node name="GatherShape" type="CollisionShape2D" parent="."]
visible = false
modulate = Color( 0.945098, 0.27451, 0.27451, 1 )
scale = Vector2( 1.75, 1 )
shape = SubResource( 2 )
disabled = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 8 )
offset = Vector2( 0, -59 )

[node name="Range" type="Area2D" parent="."]
visible = false
scale = Vector2( 1.75, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
modulate = Color( 0.737255, 0.117647, 0.823529, 0.258824 )
shape = SubResource( 3 )
disabled = true

[node name="ShieldBar" type="ProgressBar" parent="."]
visible = false
margin_left = -12.0
margin_top = -54.0
margin_right = 14.0
margin_bottom = -51.0
custom_styles/fg = ExtResource( 4 )
custom_styles/bg = ExtResource( 6 )
value = 75.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="ProgressBar" parent="."]
visible = false
margin_left = -12.0
margin_top = -50.0
margin_right = 14.0
margin_bottom = -47.0
custom_styles/fg = ExtResource( 7 )
custom_styles/bg = ExtResource( 5 )
value = 75.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="."]
visible = false
margin_left = -12.0
margin_top = -46.0
margin_right = 14.0
margin_bottom = -43.0
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 5 )
value = 75.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BumpBar" type="ProgressBar" parent="."]
visible = false
margin_left = -19.0
margin_top = 1.0
margin_right = 25.0
margin_bottom = 4.0
rect_rotation = -90.0
custom_styles/fg = SubResource( 6 )
custom_styles/bg = SubResource( 7 )
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BumpLabel" type="Label" parent="."]
visible = false
margin_left = -29.0
margin_top = -29.0
margin_right = -21.0
margin_bottom = -15.0
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationTimer" type="Timer" parent="."]
one_shot = true

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="KillTimer" type="Timer" parent="."]
one_shot = true

[node name="GatherTimer" type="Timer" parent="."]
one_shot = true

[node name="ConstructionTimer" type="Timer" parent="."]
one_shot = true

[node name="BBox" type="Area2D" parent="."]

[node name="Border" type="CollisionPolygon2D" parent="BBox"]
polygon = PoolVector2Array( 7.43597, 4.60872, 14.335, 0.144623, 13.9292, -29.0749, 10.5473, -39.4912, 0.266365, -45.5786, -10.691, -39.897, -13.5318, -28.9397, -14.0729, -0.125927, -7.30907, 4.60872, 0.131088, 5.96148 )

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource( 8 )

[node name="BumpTimer" type="Timer" parent="Path2D"]

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
[connection signal="timeout" from="AnimationTimer" to="." method="_on_AnimationTimer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="KillTimer" to="." method="_on_KillTimer_timeout"]
[connection signal="timeout" from="GatherTimer" to="." method="_on_GatherTimer_timeout"]
[connection signal="timeout" from="ConstructionTimer" to="." method="_on_ConstructionTimer_timeout"]
[connection signal="input_event" from="BBox" to="." method="_on_BBox_input_event"]
[connection signal="mouse_entered" from="BBox" to="." method="_on_BBox_mouse_entered"]
[connection signal="mouse_exited" from="BBox" to="." method="_on_BBox_mouse_exited"]
